--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
         ]
     },
     "scripts": {
-        "postinstall": "node node_modules/@famgia/omnify/scripts/postinstall.js 2>/dev/null || true",
-        "dev": "bash docker/scripts/dev.sh",
-        "dev:win": "powershell -ExecutionPolicy Bypass -File docker/scripts/dev.ps1",
-        "omnify": "omnify"
+        "setup": "node -e \"require('child_process').execSync(process.platform==='win32'?'powershell -ExecutionPolicy Bypass -File docker/scripts/setup.ps1':'bash docker/scripts/setup.sh',{stdio:'inherit'})\"",
+        "dev": "node -e \"require('child_process').execSync(process.platform==='win32'?'powershell -ExecutionPolicy Bypass -File docker/scripts/dev.ps1':'bash docker/scripts/dev.sh',{stdio:'inherit'})\""
     },
     "devDependencies": {
         "@types/node": "^25.0.4"
