--- a/.omnify/schemas/Auth/PersonalAccessToken.yaml
+++ b/.omnify/schemas/Auth/PersonalAccessToken.yaml
@@ -5,6 +5,7 @@ displayName:
 options:
   timestamps: true
   tableName: personal_access_tokens
+  hidden: true
   indexes:
     - columns: [expires_at]
 properties:
