--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dxscom/boilerplate",
+    "name": "@omnifyjp/omnify-laravel-boilerplate",
     "version": "1.0.0",
     "description": "Full-stack boilerplate with Laravel API + Next.js frontend, powered by Omnify schema-driven development",
     "keywords": [
@@ -15,7 +15,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/dxscom/boilerplate"
+        "url": "https://github.com/omnifyjp/omnify-laravel-boilerplate"
     },
     "private": true,
     "type": "module",
