feat: add frontend with Ant Design, TanStack Query, i18n, and AI documentation
- Track frontend source in git (previously generated from stubs)
- Add Ant Design 6 with theme provider and locale sync
- Add TanStack Query with service layer architecture
- Add next-intl for i18n (ja, en, vi)
- Add Day.js with UTC/timezone handling
- Add Axios with Laravel Sanctum interceptors
- Add comprehensive AI documentation (.claude/, .cursor/rules/)
- Update setup/dev scripts for frontend dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # Auto-generated projects
 backend/
-frontend/
 
 # Dependencies
 node_modules/
 vendor/
+
+# Frontend build
+frontend/.next/
+frontend/node_modules/
+frontend/.env.local
 
 # SSL Certificates (generated locally)
 docker/nginx/certs/*.pem
