--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=testing
-APP_KEY=
+APP_KEY=base64:1lmkRE5xFnHmcahhF16jtlAiyv7yX49/GKj+lpHqFzs=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
