--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Omnify
 APP_ENV=testing
-APP_KEY=base64:1lmkRE5xFnHmcahhF16jtlAiyv7yX49/GKj+lpHqFzs=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -18,6 +18,9 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# =============================================================================
+# Database (MySQL - same engine as production)
+# =============================================================================
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
@@ -25,6 +28,9 @@ DB_DATABASE=omnify_testing
 DB_USERNAME=omnify
 DB_PASSWORD=secret
 
+# =============================================================================
+# Session / Cache / Queue
+# =============================================================================
 SESSION_DRIVER=array
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
@@ -32,16 +38,30 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-
 CACHE_STORE=array
 CACHE_PREFIX=
 
-MAIL_MAILER=array
+# =============================================================================
+# Filesystem (MinIO - S3 compatible)
+# =============================================================================
+FILESYSTEM_DISK=s3
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_BUCKET=testing
+AWS_ENDPOINT=http://minio:9000
+AWS_USE_PATH_STYLE_ENDPOINT=true
+
+# =============================================================================
+# Mail (Mailpit - local SMTP server)
+# =============================================================================
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="testing@omnify.local"
+MAIL_FROM_NAME="${APP_NAME}"
