fix: SSO integration and Docker setup improvements
- Fix Docker backend build to support path repository packages
  - Change build context to root directory
  - Add packages volume mount
  - Create docker-entrypoint.sh to handle composer install on container start

- Fix SSO integration
  - Update SsoWrapper to use NEXT_PUBLIC_API_URL instead of hardcoded localhost
  - Add SSO_CONSOLE_URL and SSO_SERVICE_SLUG to docker-compose environment
  - Use host.docker.internal for backend to connect to auth.test

- Improve dev scripts
  - Add automatic cleanup of Next.js lock files before starting
  - Kill existing Next.js processes to prevent conflicts

- Update docker-compose to mount packages directory for backend

--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -19,15 +19,22 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 WORKDIR /var/www/html
 
 # Copy composer files first for better caching
-COPY composer.json composer.lock* ./
+COPY backend/composer.json backend/composer.lock* ./
+
+# Try to install dependencies (may fail if packages path doesn't exist in build context)
+# This is OK - we'll run composer install in the container after volume mount
 RUN composer install --no-scripts --no-autoloader || true
 
-# Copy the rest of the application
-COPY . .
+# Copy the rest of the backend application
+COPY backend/ .
 
 # Generate autoloader
 RUN composer dump-autoload --optimize || true
 
+# Copy entrypoint script
+COPY docker/backend/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
 EXPOSE 8000
 
-CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
