--- a/backend/composer.json
+++ b/backend/composer.json
@@ -3,12 +3,15 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "repositories": [
         {
             "type": "path",
-            "url": "../packages/omnify-sso-client",
+            "url": "/var/www/packages/omnify-sso-client",
             "options": {
                 "symlink": true
             }
