feat: Add tunnel support via omnify.jp and dev monitoring tools
- Replace local domain setup with frpc tunnel (omnify.jp)
- Add Laravel Reverb for WebSocket support
- Add Laravel Horizon for queue management (local only)
- Add Laravel Telescope for debugging (local only)
- Add Laravel Pulse for performance monitoring (local only)
- Add Redis service for caching and queues
- Update docker-compose with frpc, reverb, horizon services
- Add dev.sh/dev.ps1 prompts for devname and project name

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ frontend/.env.local
 # SSL Certificates (generated locally)
 docker/nginx/certs/*.pem
 
+# Tunnel client config (generated, contains token)
+docker/frpc/frpc.toml
+
 # Lock files
 .omnify.lock
 .omnify/versions/
@@ -17,6 +20,7 @@ docker/nginx/certs/*.pem
 
 # Local config (auto-generated)
 .env
+.omnify-dev
 backend/.env
 docker-compose.yml
 
