--- a/backend/composer.json
+++ b/backend/composer.json
@@ -22,6 +22,8 @@
         "darkaonline/l5-swagger": "^10.0",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.42",
+        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "lcobucci/jwt": "^5.0",
@@ -32,7 +34,9 @@
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
+        "laravel/pulse": "^1.0",
         "laravel/sail": "^1.41",
+        "laravel/telescope": "^5.0",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
