fix: Fix SSO authentication flow
- Fix JwtVerifier: Remove Lcobucci\Clock dependency, use anonymous PSR-20 Clock class
- Add 5 minute clock skew tolerance for JWT validation
- Fix JwksService pack() format string bug in jwkToPem method
- Prevent double callback execution in SsoCallback component
- Add name column migration for users table
- Update JwtVerifier tests

--- a/.omnify/schemas/Auth/User.yaml
+++ b/.omnify/schemas/Auth/User.yaml
@@ -6,7 +6,7 @@ options:
   timestamps: true
 properties:
   name:
-    type: JapaneseName
+    type: String
     displayName:
       ja: 名前
       en: Name
