test(omnify-sso): add comprehensive test suites for SSO packages
- Add ConsoleApiServiceTest for API service testing
- Add SsoCallbackControllerTest, SsoAuthMiddlewareTest, SsoOrganizationMiddlewareTest, SsoRoleCheckMiddlewareTest
- Add test fixtures (User model, UserFactory, migrations)
- Add React SSO tests (SsoProvider, SsoCallback, useAuth, useOrganization, useSso)
- Add vitest config for React package

--- a/packages/omnify-sso-client/composer.json
+++ b/packages/omnify-sso-client/composer.json
@@ -26,6 +26,8 @@
         "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
+        "laravel/sanctum": "^4.0",
+        "mockery/mockery": "^1.6",
         "orchestra/testbench": "^9.0",
         "pestphp/pest": "^3.0",
         "phpstan/phpstan": "^1.10"
