--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "rm -rf node_modules/@omnify/sso-react && mkdir -p node_modules/@omnify && cp -r ../packages/omnify-sso-react node_modules/@omnify/sso-react"
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
     "@ant-design/nextjs-registry": "^1.3.0",
-    "@omnify/sso-react": "file:../packages/omnify-sso-react",
     "@tanstack/react-query": "^5.90.16",
     "antd": "^6.1.4",
     "axios": "^1.13.2",
