--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "rm -rf node_modules/@omnify/sso-react && mkdir -p node_modules/@omnify && cp -r ../packages/omnify-sso-react node_modules/@omnify/sso-react"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
     "@ant-design/nextjs-registry": "^1.3.0",
+    "@famgia/sso-react": "file:../packages/omnify-sso-react/famgia-sso-react-0.1.0.tgz",
     "@tanstack/react-query": "^5.90.16",
     "antd": "^6.1.4",
     "axios": "^1.13.2",
