--- a/packages/omnify-sso-react/package.json
+++ b/packages/omnify-sso-react/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@omnify/sso-react",
+    "name": "@famgia/sso-react",
     "version": "0.1.0",
     "description": "React components and hooks for Omnify SSO integration",
     "keywords": [
@@ -34,14 +34,18 @@
     },
     "peerDependencies": {
         "react": "^18.0.0 || ^19.0.0",
-        "react-dom": "^18.0.0 || ^19.0.0"
+        "react-dom": "^18.0.0 || ^19.0.0",
+        "antd": "^5.0.0 || ^6.0.0",
+        "@ant-design/icons": "^5.0.0 || ^6.0.0"
     },
     "devDependencies": {
+        "@ant-design/icons": "^6.0.0",
         "@testing-library/jest-dom": "^6.4.0",
         "@testing-library/react": "^14.2.0",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
         "@vitejs/plugin-react": "^4.2.0",
+        "antd": "^6.0.0",
         "happy-dom": "^13.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
