--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
     "@ant-design/nextjs-registry": "^1.3.0",
-    "@famgia/sso-react": "file:../packages/omnify-sso-react/famgia-sso-react-0.1.0.tgz",
+    "@famgia/sso-react": "^0.1.0",
     "@tanstack/react-query": "^5.90.16",
     "antd": "^6.1.4",
     "axios": "^1.13.2",
