fix(sso-client): Use package namespace for factories
Changed factory namespace from `Database\Factories` to
`Omnify\SsoClient\Database\Factories` to avoid conflicts when
the main app has its own UserFactory.

Before: Database\Factories\UserFactory (conflicts with app)
After:  Omnify\SsoClient\Database\Factories\UserFactory (isolated)

This ensures the package factories work correctly without
interfering with the host application's factories.

--- a/packages/omnify-sso-client/composer.json
+++ b/packages/omnify-sso-client/composer.json
@@ -31,7 +31,7 @@
     "autoload": {
         "psr-4": {
             "Omnify\\SsoClient\\": "src/",
-            "Database\\Factories\\": "database/factories/"
+            "Omnify\\SsoClient\\Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
