feat(sso-client): Add dedicated logging channel for SSO events
Features:
- SsoLogger class with specialized logging methods
- Dedicated 'sso' log channel (daily rotation, 14 days)
- sso_log() helper function for easy access
- Privacy: email masking in logs (te***@example.com)

Logged Events:
- Authentication attempts (success/failure)
- SSO code exchange
- JWT verification
- Token refresh
- Logout events
- Security events (blocked redirects, etc.)
- Console API errors
- Permission sync

Configuration (config/sso-client.php):
- SSO_LOGGING_ENABLED (default: true)
- SSO_LOG_CHANNEL (default: 'sso')
- SSO_LOG_LEVEL (default: 'debug')

Log file: storage/logs/sso.log

Tests: 490 passed (+14 logger tests)

--- a/packages/omnify-sso-client/composer.json
+++ b/packages/omnify-sso-client/composer.json
@@ -33,7 +33,10 @@
         "psr-4": {
             "Omnify\\SsoClient\\": "src/",
             "Omnify\\SsoClient\\Database\\Factories\\": "database/factories/"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
