--- a/backend/composer.json
+++ b/backend/composer.json
@@ -3,37 +3,21 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": [
-        "laravel",
-        "framework"
-    ],
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/omnifyjp/omnify-client-laravel-sso"
-        }
-    ],
     "require": {
         "php": "^8.2",
-        "darkaonline/l5-swagger": "^10.0",
-        "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^12.0",
-        "laravel/horizon": "^5.42",
-        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "lcobucci/jwt": "^5.0",
-        "omnifyjp/omnify-client-laravel-sso": "^1.1",
-        "spatie/laravel-query-builder": "^6.4"
+        "lcobucci/jwt": "^5.6",
+        "omnifyjp/omnify-client-laravel-sso": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
-        "laravel/pulse": "^1.0",
         "laravel/sail": "^1.41",
-        "laravel/telescope": "^5.0",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
