--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,7 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "lcobucci/jwt": "^5.6",
-        "omnifyjp/omnify-client-laravel-sso": "*"
+        "omnifyjp/omnify-client-laravel-sso": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
